hostinger rule updated

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://tanya4558.github.io/Nik_Renew",
+  "homepage": ".",
   "name": "my-react-app",
   "private": true,
   "version": "0.0.0",
